# irodori-kit

./: .gitignore  Cargo.toml  README.md
irodori-extension/src/: lib.rs
irodori-generate/src/: chat.rs  command.rs  http.rs
irodori-proxy/: Cargo.toml
irodori-proxy/src/: forwarder.rs  lib.rs  protocol.rs
irodori-secure-store/: Cargo.toml
irodori-secure-store/src/: lib.rs
irodori-server/: Cargo.toml
irodori-server/src/: audit.rs  main.rs  server.rs  source.rs
packaging/: README.md
packaging/irodori-table/package-managers/: README.md
packaging/irodori-table/package-managers/flatpak/: dev.irodori.table.yml.template
